fix header z-index

--- a/assets/style/style.sass
+++ b/assets/style/style.sass
@@ -61,7 +61,7 @@ header
 	-webkit-box-shadow: 0px 10px 15px 4px rgba(219,219,219,1)
 	-moz-box-shadow: 0px 10px 15px 4px rgba(219,219,219,1)
 	box-shadow: 0px 10px 15px 4px rgba(219,219,219,1)
-	z-index: 1
+	z-index: 999
 	
 	h2
 		display: inline
@@ -100,6 +100,7 @@ main
 
 	section
 		width: 62%
+		margin-bottom: $x * 4
 		//padding: $x
 		//overflow: scroll
 
